# viharaos-desktop

./: .gitignore  .semgrepignore  README.md  package.json  tsconfig.json
.github/workflows/: desktop-release.yml
scripts/: build-msix.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: _make_dmg_background.py  _make_nsis_bmps.py  icon.icns
src-tauri/msix/: Package.appxmanifest
src-tauri/src/: db.rs  image.rs  lib.rs  main.rs  menu.rs  r2.rs  sync.rs
src-tauri/src/commands/: api.rs  auth.rs  conflicts.rs  heartbeat.rs  media.rs  mod.rs  sync.rs  updater.rs
src-tauri/src/db/: models.rs  schema.rs
